# hackathon_template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  compose.override.yml.example  compose.yml
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 93a69419b748_create_users_table.py
backend/app/: main.py
backend/app/api/: .gitkeep  calendar.py
backend/app/core/: .gitkeep  config.py
backend/app/db/: .gitkeep  base.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  calendar.py  course.py  personal_event.py
backend/static/: .gitkeep  index.html
backend/static/assets/: index-zVTTZs_O.js
backend/test/: .gitkeep
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docs/: API.md  DATABASE.md  DEPLOY.md  FRONTEND.md  GIT.md  TASKS.md  TYPESCRIPT.md  design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: .gitkeep
frontend/src/: .gitkeep  constants.ts  main.ts  main.tsx
frontend/src/types/: api.ts
scripts/dev/: start-backend.sh  start-frontend.sh
